erDiagram
    ProjectDefenseRequest {
        int request_id PK
        int project_id FK
        enum defense_type "PROJECT1|THESIS"
        enum status "draft|submitted|advisor_in_review|advisor_approved|staff_verified|scheduled|completed|cancelled"
        json form_payload
        int submitted_by_student_id FK
        datetime submitted_at
        datetime advisor_approved_at
        datetime defense_scheduled_at
        string defense_location
        text defense_note
        int scheduled_by_user_id FK
        int staff_verified_by_user_id FK
        boolean submitted_late
        int submission_delay_minutes
        int important_deadline_id FK
    }

    ProjectDefenseRequestAdvisorApproval {
        int approval_id PK
        int request_id FK
        int teacher_id FK
        string teacher_role
        enum status "pending|approved|rejected"
        text note
        datetime approved_at
    }

    ProjectExamResult {
        int exam_result_id PK
        int project_id FK
        enum exam_type "PROJECT1|THESIS"
        enum result "PASS|FAIL"
        decimal score
        text notes
        boolean require_scope_revision
        int recorded_by_user_id FK
        datetime recorded_at
        datetime student_acknowledged_at
    }

    ProjectTestRequest {
        int request_id PK
        int project_id FK
        int submitted_by_student_id FK
        string status
        string request_file_path
        text student_note
        datetime submitted_at
        date test_start_date
        date test_due_date
        int advisor_teacher_id FK
        text advisor_decision_note
        int co_advisor_teacher_id FK
        string evidence_file_path
        boolean submitted_late
        int important_deadline_id FK
    }

    ProjectDocument ||--o{ ProjectDefenseRequest : "requests defense"
    ProjectDocument ||--o{ ProjectExamResult : "has results"
    ProjectDocument ||--o{ ProjectTestRequest : "requests test"
    ProjectDefenseRequest ||--o{ ProjectDefenseRequestAdvisorApproval : "needs approvals"
    ProjectDefenseRequestAdvisorApproval }o--|| Teacher : "by teacher"
    ProjectExamResult }o--|| User : "recorded by"
